# chf-v2

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  LOCAL_HANDOFF.md  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all.sh  run_dashboard.sh  run_product_dashboard.sh  run_scheduler.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
agents/: alpha_research_agent.py  backtest_agent.py  base.py  feature_agent.py  label_agent.py  market_data_agent.py  model_agent.py  onchain_agent.py  portfolio_agent.py  universe_agent.py  universe_agent_cmc.py  universe_agent_free.py  universe_sources.py
app/: api.py  dashboard.py
coinmarketcap_data/: README.md
coinmarketcap_extract/: README.md  extract_cmc_daily_history.py
configs/: config.py  logging_config.py  run_config.yaml  universe_exclusions.yaml
docs/: ALPHA_BACKTEST_VERIFICATION_REPORT.md  ALPHA_FINDINGS_REPORT.md  ALPHA_SIGNAL_SEARCH_REPORT.md  API_DATA_READINESS_AUDIT.md  API_KEYS_AND_DATA_SOURCES.md  ARTIFACT_MANIFEST.md  BACKTEST_AGENT.md  BENCHMARK_VERIFICATION.md  CMC_3YR_DAILY_EXTRACTION.md  CMC_HISTORICAL_ACCESS_LIMITATION.md  COINMARKETCAP.md  DASHBOARD_DEMO_GUIDE.md  DASHBOARD_GUIDE.md  FEATURE_AGENT.md  FINAL_RELEASE_AUDIT.md  FINAL_REVIEWER_PACKET.md  GITHUB_SUBMISSION_CHECKLIST.md  LABEL_AGENT.md  LIMITATIONS_AND_NEXT_STEPS.md  MARKET_DATA_AGENT.md  MODEL_AGENT.md  NEXT_STEPS.md  ONCHAIN_AGENT.md  PIPELINE_RUN_REPORT.md  PORTFOLIO_AGENT.md  PRODUCT_DASHBOARD_GUIDE.md  PROJECT_CHF_DOC.md  PROJECT_OVERVIEW.md  REPRODUCIBILITY_CHECKLIST.md  (+14 more)
(+423 files in other folders)
